-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 15.0.0-beta1
-
-
502e1e4a7 (master)
I have:
- the global Editor settings set to Tabs Only and continuation to Regular Indent
- a QMake project containing a README.md as `OTHER_FILES` entry
- the project Editor settings set to Spaces Only and continuation to Spaces or Regular Indent (makes no difference). Indentation size is set to 2.
- Pressed TAB in the README.md and got a TAB character instead the expected two spaces.
- Interesting: inside the QMake .pro file, pressing TAB really inserts spaces
So it seems the project settings are valid, but ignored for this file.
BTW: If I change the global Editor settings to Spaces Only, it instantly insert spaces in the README.md also.
- relates to
-
QTCREATORBUG-25628 Autodetect indentation
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-31875 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 609765,3 | PE: apply project specific settings to nested text editors | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |