PE: apply project specific settings to nested text editors

Fixes: QTCREATORBUG-31875
Change-Id: I82749c43061d46c13d8ad06d4919343ee0074348
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: André Hartmann <aha_1980@gmx.de>