src/plugins/projectexplorer/editorconfiguration.h
@@ -29,6 +29,7 @@ class ExtraEncodingSettings;
 class MarginSettings;
 } // namespace TextEditor
 
+namespace Core { class IEditor; }
 namespace Utils { class FilePath; }
 
 namespace ProjectExplorer {
@@ -61,8 +62,8 @@ public:
     TextEditor::ICodeStylePreferences *codeStyle(Utils::Id languageId) const;
     QMap<Utils::Id, TextEditor::ICodeStylePreferences *> codeStyles() const;
 
-    void configureEditor(TextEditor::BaseTextEditor *textEditor) const;
-    void deconfigureEditor(TextEditor::BaseTextEditor *textEditor) const;
+    void configureEditor(Core::IEditor *editor) const;
+    void deconfigureEditor(Core::IEditor *editor) const;
 
     Utils::Store toMap() const;
     void fromMap(const Utils::Store &map);
